manifests/1-app-cdc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: cdc-deployment
    labels:
        app: feedme
spec:
    replicas: 1
    selector:
        matchLabels:
            app: cdc
    template:
        metadata:
            labels:
                app: cdc
        spec:
            containers:
                - name: cdc
                  image: feedme/cdc:latest
                  imagePullPolicy: Never
