manifests/1-app-apigw.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: apigw-deployment
    labels:
        app: feedme
spec:
    replicas: 1
    selector:
        matchLabels:
            app: apigw
    template:
        metadata:
            labels:
                app: apigw
        spec:
            containers:
                - name: apigw
                  image: feedme/apigw:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: apigw-service
    labels:
        app: feedme
spec:
    type: LoadBalancer
    ports:
        - port: 3000
          targetPort: 3000
    selector:
        app: apigw
