manifests/1-app-business.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: business-deployment
    labels:
        app: feedme
spec:
    replicas: 1
    selector:
        matchLabels:
            app: business
    template:
        metadata:
            labels:
                app: business
        spec:
            containers:
                - name: business
                  image: feedme/business:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: business-service
    labels:
        app: feedme
spec:
    type: LoadBalancer
    ports:
        - port: 3000
          targetPort: 3000
    selector:
        app: business
