manifests/1-app-updates.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: updates-deployment
    labels:
        app: feedme
spec:
    replicas: 1
    selector:
        matchLabels:
            app: updates
    template:
        metadata:
            labels:
                app: updates
        spec:
            containers:
                - name: updates
                  image: feedme/updates:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: updates-service
    labels:
        app: feedme
spec:
    type: LoadBalancer
    ports:
        - port: 3000
          targetPort: 3000
    selector:
        app: updates
