manifests/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /$2
    labels:
        app: feedme
spec:
    rules:
        - http:
              paths:
                  - path: /submitevent(/|$)(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: submitevent
                            port:
                                number: 3000
