manifests/6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: "nginx"
    name: example-app
spec:
    tls:
        - hosts:
              - api.feedme.benosborn.tech
          secretName: example-app-tls
    rules:
        - host: api.feedme.benosborn.tech
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: example-service
                            port:
                                number: 80
